# chainlit_lamma3_cutomer

./: .gitignore  README.md  app.py  chainlit.md
chainlit_lamma3_cutomer/: pyproject.toml
gemma_model/: setup.ps1  setup.sh
gemma_model/src/: model.py
