[tool.poetry]
name = "chainlit-lamma3-cutomer"
version = "0.1.0"
description = ""
authors = ["iamamofa <joamofa@st.ug.edu.gh>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
chainlit = "^1.1.402"
openai = "^1.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
